tests/cases/compiler-development/artifact/errors/diagnostic-match-struct-pattern-unknown-field.diagnostic
diagnostic error code=T0001 family=type message="struct 'Point' has no field 'z'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-struct-pattern-unknown-field.ari" display="tests/cases/match/errors/match-struct-pattern-unknown-field.ari" bytes=159
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-struct-pattern-unknown-field.ari" line=9 column=16 end_line=9 end_column=17 byte_start=131 byte_end=132 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-struct-pattern-unknown-field.ari:9:16\n   |\n 9 |     Point { x, z, y } => x + z + y,\n   |                ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-struct-pattern-unknown-field.ari" line=1 column=8 end_line=1 end_column=13 byte_start=7 byte_end=12 message="struct 'Point' declares fields 'x', 'y'"
  Snippet label=1 text="  --> tests/cases/match/errors/match-struct-pattern-unknown-field.ari:1:8\n   |\n 1 | struct Point {\n   |        ^^^^^"
  Note index=0 location=none message="field access and struct patterns must name a declared field"
  Help index=0 location=none message="use one of 'x', 'y'"
